creusot/tests/should_fail/prusti/invalid_state/now_expiry.stderr
error: 'now can not be used in specifications of program functions
 --> now_expiry.rs:4:16
  |
4 | #[after_expiry('now, result == x)]
  |                ^^^^

error: aborting due to 1 previous error

